feat(harness): arm facilities for the vector / kafka-connect / clickhouse-kafka-engine entrants (#20)
* feat(harness): arm facilities — deviations, per-entrant DDL hook, forwarded-insert attribution, descriptor gc_log

Implements what methodology rule 4 and CONTRIBUTING already promise, ahead of
the three new arms (vector, kafka-connect, clickhouse-kafka-engine):

- [[deviations]] parses (what/why/affects, matching the site's existing type);
  an empty `what` is refused.
- [clickhouse] arm_sql/arm_teardown_sql: entrant-owned DDL applied to the
  shared server per repetition (teardown -> TRUNCATE -> create), split by the
  same comment-stripping splitter as the workload DDL. dataset_version is
  untouched by construction.
- [clickhouse].attribution_tables and .forwarded_inserts: the MV-flatten arm's
  landing table joins the query-log attribution, and a Distributed-forwarding
  arm drops only the is_initial_query predicate (its inserts are non-initial
  on the shared server; the strict predicate would match nothing).
- gc_log moves onto [[envelope.container]]: the Flink paths leave the harness
  for the descriptor, a drift test holds descriptor and configuration together,
  and a JVM container without one records an absence, never a zero.
- each_arm_restates_the_transform is table-driven with a completeness test:
  an entrant cannot become active without a row, config-only artifacts (VRL,
  MV SQL) included.

* feat(ceiling): measure json_each_row and arrow_stream ingest ceilings

Two new benchmark arms will report wire formats the rig could not emit, so
their arms would have shipped ungated against ClickHouse — the same visible
gap Native closed. Format gains JsonEachRow ("json_each_row" / JSONEachRow)
and ArrowStream ("arrow_stream" / ArrowStream), with encoders driven from
row_of so neither can drift from the committed DDL.

JSONEachRow is hand-rolled: keys in DDL order, full-width integers as bare
JSON numbers, shortest-round-trip floats, a minimal RFC 8259 escap